[package]
name = "fcm_v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
hyper = "0.14"
hyper-rustls = "0.23"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
yup-oauth2 = "8"

[dev-dependencies]
tokio = {version = "1", features = ["macros"]}