[package]
name = "fcm_v1"
version = "0.3.0"
edition = "2021"

description = "a simple Rust FCM server library (HTTP v1 API)"
readme = "README.md"
homepage = "https://github.com/sanath-2024/fcm_v1"
documentation = "https://docs.rs/fcm_v1/latest/fcm_v1"
repository = "https://github.com/sanath-2024/fcm_v1"
license = "MIT"
keywords = ["fcm", "gcp", "google", "firebase", "api"]
categories = ["api-bindings", "web-programming"]

[dependencies]
async-trait = "0.1"
bytes = "1"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
yup-oauth2 = "8.3"

[dev-dependencies]
tokio = {version = "1", features = ["macros"]}