[package]
name = "fcm_v1"
version = "0.3.0"
edition = "2021"
description = "a simple Rust FCM server library (HTTP v1 API)"
readme = "README.md"
homepage = "https://github.com/sanath-2024/fcm_v1"
documentation = "https://docs.rs/fcm_v1/latest/fcm_v1"
repository = "https://github.com/sanath-2024/fcm_v1"
license = "MIT"
keywords = ["fcm", "gcp", "google", "firebase", "api"]
categories = ["api-bindings", "web-programming"]

[features]
# See https://docs.rs/reqwest/latest/reqwest/#optional-features
default = ["reqwest/default-tls"]
## Enables TLS functionality provided by `native-tls`.
native-tls = ["reqwest/native-tls"]
## Enables the `vendored` feature of `native-tls`.
native-tls-vendored = ["reqwest/native-tls-vendored"]
# Enables the `alpn` feature of `native-tls`.
#native-tls-alpn = [ "reqwest/native-tls-alpn" ]
## Enables TLS functionality provided by `rustls`. Equivalent to `rustls-tls-webpki-roots`.
rustls-tls = ["reqwest/rustls-tls"]
## Enables TLS functionality provided by `rustls`, without setting any root certificates. Roots have to be specified manually.
rustls-tls-manual-roots = ["reqwest/rustls-tls-manual-roots"]
## Enables TLS functionality provided by `rustls`, while using root certificates from the `webpki-roots` crate.
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
# Enables TLS functionality provided by `rustls`, while using root certificates from the `rustls-native-certs` crate.
#rustls-tls-native-roots = [ "reqwest/rustls-tls-native-root" ]

[dependencies]
async-trait = "0.1"
document-features = "0.2.8"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yup-oauth2 = "8.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
